fixed tilenumber alignment

--- a/chess.css
+++ b/chess.css
@@ -210,13 +210,10 @@ footer{
 
 .tileletter{
   position:absolute;
-  width:100%;
-  height:100%;
-  max-width:25px;
-  max-height:25px;
+ 
   display: flex;
   color:white;
-  right: 2%;
+  right: 3%;
   bottom: 2%;
   font-family: Arial, Helvetica, sans-serif;
   font-size:20px;
